--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html>
       <head>
         <meta charset="UTF-8">
-        <title>xs</title>
+        <title>Hello Webpack!</title>
       </head>
       <body></body>
-    </html>
+</html>
